<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="10dp"
    tools:context=".MainActivitySQLite"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewAsuntoAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AgregarUsuario"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/textLayoutUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintUsername"
            app:helperText="@string/Helper"
            app:layout_constraintBottom_toTopOf="@+id/textLayoutPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAsuntoAgregar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintPassword"
            app:helperText="@string/Helper"
            app:layout_constraintBottom_toTopOf="@+id/btonAgregar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btonAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Agregar"
            app:layout_constraintBottom_toTopOf="@+id/textViewAsuntoVer"
            app:layout_constraintEnd_toStartOf="@+id/btonVer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutPassword" />

        <Button
            android:id="@+id/btonVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ver"
            app:layout_constraintBottom_toBottomOf="@+id/btonAgregar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btonAgregar"
            app:layout_constraintTop_toTopOf="@+id/btonAgregar" />




        <TextView
            android:id="@+id/textViewAsuntoVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VerUsuario"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textLayoutUpdateUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btonAgregar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutUpdateUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintUsername2"
            app:layout_constraintBottom_toTopOf="@+id/textLayoutUpdatePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAsuntoVer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldUpdateUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutUpdatePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintUsername3"
            app:layout_constraintBottom_toTopOf="@+id/btonActualizar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutUpdateUsername">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldUpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btonActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Actualizar"
            app:layout_constraintBottom_toTopOf="@+id/textViewAsuntoBorrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutUpdatePassword" />




        <TextView
            android:id="@+id/textViewAsuntoBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BorrarUsuario"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textLayoutDeleteUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btonActualizar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLayoutDeleteUser"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HintBorrar"
            app:helperText="@string/Helper"
            app:layout_constraintBottom_toTopOf="@+id/btonBorrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAsuntoBorrar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldDeleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Borrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutDeleteUser"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>